--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -2,6 +2,7 @@ version: "3.5"
 services: 
     api:
         build: .
+        container_name: api
         volumes: 
             - .:/app
         ports: 
